force-app/main/default/objects/PlatformMessage__e/PlatformMessage__e.object-meta.xml
<CustomObject>
    <description
  >Platform event used for publish and subscribe LWC demo.</description>
    <label>Platform Message</label>
    <pluralLabel>Platform Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>