force-app/main/default/objects/PlatformMessage__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category for the platform event message.</description>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>