force-app/main/default/objects/PlatformMessage__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message body for the platform event.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>