force-app/main/default/objects/PlatformMessage__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origin of the published event.</description>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>